Heap vs. Off-Heap Memory en Aplicaciones Java 21
Updated the document on heap vs off-heap memory in Java applications, enhancing clarity and adding new sections on quality gates, architectural components, and metrics for monitoring.